--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
     main:
-        namespace: Acme\SyliusExamplePlugin
-        psr4_prefix: Acme\SyliusExamplePlugin
+        namespace: PTS\SyliusBlogPlugin
+        psr4_prefix: PTS\SyliusBlogPlugin
