--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-
+        "bitbag/cms-plugin": "^2.3",
         "sylius/sylius": "^1.4"
     },
     "require-dev": {
