--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
     main:
-        namespace: PTS\SyliusBlogPlugin
-        psr4_prefix: PTS\SyliusBlogPlugin
+        namespace: PTS\SyliusArticlePlugin
+        psr4_prefix: PTS\SyliusArticlePlugin
